fixed issue where whitespace description showed the 'Description:' heading. fixed issue where events associated with no sprints had sharp corners. fixed issue where sprints with no events, deadline or milestones still had a heading for them.

--- a/portfolio/src/main/resources/static/styles/pages/project_details.css
+++ b/portfolio/src/main/resources/static/styles/pages/project_details.css
@@ -331,6 +331,10 @@ textarea {
     padding: 0px 5px;
 }
 
+.card-content {
+    padding: 25px;
+}
+
 @media only screen and (max-width: 1590px) {
 
     .input-start-time {
